--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
     }
 
     function create() {
+
+
         //  We're going to be using physics, so enable the Arcade Physics system
         game.physics.startSystem(Phaser.Physics.ARCADE);
 
         //  A simple background for our game
         game.add.sprite(0, 0, 'sky');
+
+        game.add.sprite(0, 200, 'star');
 
         //  The platforms group contains the ground and the 2 ledges we can jump on
         platforms = game.add.group();
@@ -51,12 +55,31 @@
 
         ledge.body.immovable = true;
 
-        ledge = platforms.create(-150, 250, 'ground');
+        ledge = platforms.create(0, 250, 'ground');
 
         ledge.body.immovable = true;
+
+        ledge = platforms.create(-150, 380, 'ground');
+
+        // The player and its settingsgit add .
+        player = game.add.sprite(10, game.world.height - 200, 'dude');
+
+        //  We need to enable physics on the player
+        game.physics.arcade.enable(player);
+
+        //  Player physics properties. Give the little guy a slight bounce.
+        player.body.bounce.y = 0.2;
+        player.body.gravity.y = 300;
+        player.body.collideWorldBounds = true;
+
+        //  Our two animations, walking left and right.
+        player.animations.add('left', [0, 1, 2, 3], 10, true);
+        player.animations.add('right', [5, 6, 7, 8], 10, true);
+
     }
 
     function update() {
+        game.physics.arcade.collide(player, platforms);
     }
 
 </script>
