--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 
         ledge.body.immovable = true;
 
-        ledge = platforms.create(-150, 380, 'ground');
+        ledge = platforms.create(400, 100, 'ground');
+
+        ledge.body.immovable = true;
 
         // The player and its settingsgit add .
         player = game.add.sprite(10, game.world.height - 200, 'dude');
@@ -76,10 +78,44 @@
         player.animations.add('left', [0, 1, 2, 3], 10, true);
         player.animations.add('right', [5, 6, 7, 8], 10, true);
 
+        cursors = game.input.keyboard.createCursorKeys();
+
     }
 
     function update() {
         game.physics.arcade.collide(player, platforms);
+
+
+        player.body.velocity.x = 0;
+
+        if (cursors.left.isDown)
+        {
+            //  Move to the left
+            player.body.velocity.x = -150;
+
+            player.animations.play('left');
+        }
+        else if (cursors.right.isDown)
+        {
+            //  Move to the right
+            player.body.velocity.x = 150;
+
+            player.animations.play('right');
+        }
+        else
+        {
+            //  Stand still
+            player.animations.stop();
+
+            player.frame = 4;
+        }
+
+        //  Allow the player to jump if they are touching the ground.
+        if (cursors.up.isDown && player.body.touching.down)
+        {
+            player.body.velocity.y = -350;
+        }
+
     }
 
 </script>
