--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         ledge.body.immovable = true;
 
-        ledge = platforms.create(400, 100, 'ground');
+        ledge = platforms.create(550, 100, 'ground');
 
         ledge.body.immovable = true;
 
@@ -78,27 +78,51 @@
         player.animations.add('left', [0, 1, 2, 3], 10, true);
         player.animations.add('right', [5, 6, 7, 8], 10, true);
 
+        //  Finally some stars to collect
+        stars = game.add.group();
+
+        //  We will enable physics for any star that is created in this group
+        stars.enableBody = true;
+
+        //  Here we'll create 12 of them evenly spaced apart
+        for (var i = 0; i < 20; i++)
+        {
+            //  Create a star inside of the 'stars' group
+            var star = stars.create(i * 80, 0, 'star');
+
+            //  Let gravity do its thing
+            star.body.gravity.y = 1000;
+
+            //  This just gives each star a slightly random bounce value
+            star.body.bounce.y = 0.2 + Math.random() * 0.5;
+        }
+
+
         cursors = game.input.keyboard.createCursorKeys();
+
+
 
     }
 
     function update() {
         game.physics.arcade.collide(player, platforms);
+        game.physics.arcade.collide(stars, platforms);
 
+        game.physics.arcade.overlap(player, stars, collectStar, null, this);
 
         player.body.velocity.x = 0;
 
         if (cursors.left.isDown)
         {
             //  Move to the left
-            player.body.velocity.x = -150;
+            player.body.velocity.x = -350;
 
             player.animations.play('left');
         }
         else if (cursors.right.isDown)
         {
             //  Move to the right
-            player.body.velocity.x = 150;
+            player.body.velocity.x = 350;
 
             player.animations.play('right');
         }
@@ -111,10 +135,17 @@
         }
 
         //  Allow the player to jump if they are touching the ground.
-        if (cursors.up.isDown && player.body.touching.down)
+        if (cursors.up.isDown && player.body.touching.down )
         {
             player.body.velocity.y = -350;
         }
+
+    }
+
+    function collectStar (player, star) {
+
+        // Removes the star from the screen
+        star.kill();
 
     }
 
