--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
     }
 
+    var player;
+    var platforms;
+    var cursors;
+
+    var stars;
+    var score = 0;
+    var scoreText;
+
     function create() {
 
 
@@ -97,6 +105,7 @@
             star.body.bounce.y = 0.2 + Math.random() * 0.5;
         }
 
+        scoreText = game.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 
         cursors = game.input.keyboard.createCursorKeys();
 
@@ -146,6 +155,9 @@
 
         // Removes the star from the screen
         star.kill();
+
+        score += 10;
+        scoreText.text = 'Score: ' + score;
 
     }
 
