--- a/index.html
+++ b/index.html
@@ -10,153 +10,159 @@
 
 <script type="text/javascript">
 
-    var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create, update: update });
+    var playState = {
 
 
-    function preload() {
-        game.load.image('sky', 'assets/sky.png');
-        game.load.image('ground', 'assets/platform.png');
-        game.load.image('star', 'assets/star.png');
-        game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
-    }
+        preload: function() {
+            game.load.image('sky', 'assets/sky.png');
+            game.load.image('ground', 'assets/platform.png');
+            game.load.image('star', 'assets/star.png');
+            game.load.spritesheet('dude', 'assets/dude.png', 32, 48);
+        },
 
-    var player;
-    var platforms;
-    var cursors;
+//        var player;
+//
+//        var cursors;
+//
+//        var stars;
+//        var score = 0;
+//        var scoreText;
 
-    var stars;
-    var score = 0;
-    var scoreText;
+        create: function() {
+            //  We're going to be using physics, so enable the Arcade Physics system
+            game.physics.startSystem(Phaser.Physics.ARCADE);
 
-    function create() {
+            //  A simple background for our game
+            game.add.sprite(0, 0, 'sky');
 
 
-        //  We're going to be using physics, so enable the Arcade Physics system
-        game.physics.startSystem(Phaser.Physics.ARCADE);
 
-        //  A simple background for our game
-        game.add.sprite(0, 0, 'sky');
+            //  The platforms group contains the ground and the 2 ledges we can jump on
+            this.platforms = game.add.group();
 
-        game.add.sprite(0, 200, 'star');
+            //  We will enable physics for any object that is created in this group
+            this.platforms.enableBody = true;
 
-        //  The platforms group contains the ground and the 2 ledges we can jump on
-        platforms = game.add.group();
+            // Here we create the ground.
+            this.ground = this.platforms.create(0, game.world.height - 64, 'ground');
 
-        //  We will enable physics for any object that is created in this group
-        platforms.enableBody = true;
+            //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
+            this.ground.scale.setTo(2, 2);
 
-        // Here we create the ground.
-        var ground = platforms.create(0, game.world.height - 64, 'ground');
+            //  This stops it from falling away when you jump on it
+            this.ground.body.immovable = true;
 
-        //  Scale it to fit the width of the game (the original sprite is 400x32 in size)
-        ground.scale.setTo(2, 2);
+            //  Now let's create two ledges
+            this.ledge = this.platforms.create(400, 400, 'ground');
 
-        //  This stops it from falling away when you jump on it
-        ground.body.immovable = true;
+            this.ledge.body.immovable = true;
 
-        //  Now let's create two ledges
-        var ledge = platforms.create(400, 400, 'ground');
+            this.ledge = this.platforms.create(0, 250, 'ground');
 
-        ledge.body.immovable = true;
+            this.ledge.body.immovable = true;
 
-        ledge = platforms.create(0, 250, 'ground');
+            this.ledge = this.platforms.create(550, 100, 'ground');
 
-        ledge.body.immovable = true;
+            this.ledge.body.immovable = true;
 
-        ledge = platforms.create(550, 100, 'ground');
+            // The player and its settingsgit add .
+            this.player = game.add.sprite(10, game.world.height - 200, 'dude');
 
-        ledge.body.immovable = true;
+            //  We need to enable physics on the player
+            game.physics.arcade.enable(this.player);
 
-        // The player and its settingsgit add .
-        player = game.add.sprite(10, game.world.height - 200, 'dude');
+            //  Player physics properties. Give the little guy a slight bounce.
+            this.player.body.bounce.y = 0.2;
+            this.player.body.gravity.y = 300;
+            this.player.body.collideWorldBounds = true;
 
-        //  We need to enable physics on the player
-        game.physics.arcade.enable(player);
+            //  Our two animations, walking left and right.
+            this.player.animations.add('left', [0, 1, 2, 3], 10, true);
+            this.player.animations.add('right', [5, 6, 7, 8], 10, true);
 
-        //  Player physics properties. Give the little guy a slight bounce.
-        player.body.bounce.y = 0.2;
-        player.body.gravity.y = 300;
-        player.body.collideWorldBounds = true;
+            //  Finally some stars to collect
+            this.stars = game.add.group();
 
-        //  Our two animations, walking left and right.
-        player.animations.add('left', [0, 1, 2, 3], 10, true);
-        player.animations.add('right', [5, 6, 7, 8], 10, true);
+            //  We will enable physics for any star that is created in this group
+            this.stars.enableBody = true;
 
-        //  Finally some stars to collect
-        stars = game.add.group();
+            //  Here we'll create 12 of them evenly spaced apart
+            for (var i = 0; i < 20; i++)
+            {
+                //  Create a star inside of the 'stars' group
+                this.star = this.stars.create(i * 80, 0, 'star');
 
-        //  We will enable physics for any star that is created in this group
-        stars.enableBody = true;
+                //  Let gravity do its thing
+                this.star.body.gravity.y = 1000;
 
-        //  Here we'll create 12 of them evenly spaced apart
-        for (var i = 0; i < 20; i++)
-        {
-            //  Create a star inside of the 'stars' group
-            var star = stars.create(i * 80, 0, 'star');
+                //  This just gives each star a slightly random bounce value
+                this.star.body.bounce.y = 0.2 + Math.random() * 0.5;
+            }
+            this.score = 0;
 
-            //  Let gravity do its thing
-            star.body.gravity.y = 1000;
+            this.scoreText = game.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 
-            //  This just gives each star a slightly random bounce value
-            star.body.bounce.y = 0.2 + Math.random() * 0.5;
+            this.cursors = game.input.keyboard.createCursorKeys();
+
+
+
+        },
+
+        update: function() {
+            game.physics.arcade.collide(this.player, this.platforms);
+            game.physics.arcade.collide(this.stars, this.platforms);
+
+            game.physics.arcade.overlap(this.player, this.stars, this.collectStar, null, this);
+
+            this.player.body.velocity.x = 0;
+
+            if (this.cursors.left.isDown)
+            {
+                //  Move to the left
+                this.player.body.velocity.x = -350;
+
+                this.player.animations.play('left');
+            }
+            else if (this.cursors.right.isDown)
+            {
+                //  Move to the right
+                this.player.body.velocity.x = 350;
+
+                this.player.animations.play('right');
+            }
+            else
+            {
+                //  Stand still
+                this.player.animations.stop();
+
+                this.player.frame = 4;
+            }
+
+            //  Allow the player to jump if they are touching the ground.
+            if (this.cursors.up.isDown && this.player.body.touching.down )
+            {
+                this.player.body.velocity.y = -350;
+            }
+
+        },
+
+        collectStar: function  (a,b) {
+
+
+            // Removes the star from the screen
+            b.kill();
+
+            this.score += 10;
+            this.scoreText.text = 'Score: ' + this.score;
+
         }
 
-        scoreText = game.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+    };
 
-        cursors = game.input.keyboard.createCursorKeys();
+    var game = new Phaser.Game(800, 600, Phaser.AUTO, 'Game');
 
-
-
-    }
-
-    function update() {
-        game.physics.arcade.collide(player, platforms);
-        game.physics.arcade.collide(stars, platforms);
-
-        game.physics.arcade.overlap(player, stars, collectStar, null, this);
-
-        player.body.velocity.x = 0;
-
-        if (cursors.left.isDown)
-        {
-            //  Move to the left
-            player.body.velocity.x = -350;
-
-            player.animations.play('left');
-        }
-        else if (cursors.right.isDown)
-        {
-            //  Move to the right
-            player.body.velocity.x = 350;
-
-            player.animations.play('right');
-        }
-        else
-        {
-            //  Stand still
-            player.animations.stop();
-
-            player.frame = 4;
-        }
-
-        //  Allow the player to jump if they are touching the ground.
-        if (cursors.up.isDown && player.body.touching.down )
-        {
-            player.body.velocity.y = -350;
-        }
-
-    }
-
-    function collectStar (player, star) {
-
-        // Removes the star from the screen
-        star.kill();
-
-        score += 10;
-        scoreText.text = 'Score: ' + score;
-
-    }
-
+    game.state.add('play', playState);
+    game.state.start('play');
 </script>
 
 </body>
